EPBDS-14505 Wrap multiple ACL services with service provider to simplify bean injections, improve configuration